--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ Network Trash Folder
 Temporary Items
 .apdisk
 inc/runtastic.test.php
+*.pot~
+languages/runpress-de_DE-backup-201702121948320.po~
